--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-pdf/renderer": "^3.4.4",
     "axios": "^1.7.2",
     "bulma": "^1.0.1",
+    "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
